// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render bold 1`] = `
<DocumentFragment>
  .c0 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
  font-size: 0.9375em;
  line-height: 1.25rem;
}

@media (min-width:20em) {
  .c0 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

<p
    class="c0"
  >
    This is text with 
    <b>
      some bold formatting
    </b>
    .
  </p>
</DocumentFragment>
`;

exports[`Text should render inline-code 1`] = `
<DocumentFragment>
  .c0 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
  font-size: 0.9375em;
  line-height: 1.25rem;
}

@media (min-width:20em) {
  .c0 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

<p
    class="c0"
  >
    This is text with 
    <code>
      some inline code
    </code>
    .
  </p>
</DocumentFragment>
`;

exports[`Text should render italics 1`] = `
<DocumentFragment>
  .c0 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
  font-size: 0.9375em;
  line-height: 1.25rem;
}

@media (min-width:20em) {
  .c0 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

<p
    class="c0"
  >
    This is text with 
    <i>
      some italic formatting
    </i>
    .
  </p>
</DocumentFragment>
`;

exports[`Text should render strike-through 1`] = `
<DocumentFragment>
  .c0 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
  font-size: 0.9375em;
  line-height: 1.25rem;
}

@media (min-width:20em) {
  .c0 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

<p
    class="c0"
  >
    This is text with 
    <del>
      some strike-through formatting
    </del>
    .
  </p>
</DocumentFragment>
`;
